Render list.html using Bootstrap.
- Re-jigger the contents of list.html to use a 3-column Bootstrap grid
- Export Bootstrap static asset directories (js/ and css/) in app.yaml

--- a/gae/app.yaml
+++ b/gae/app.yaml
@@ -11,6 +11,12 @@ libraries:
   version: "2.3"
 
 handlers:
+- url: /css
+  static_dir: css
+
+- url: /js
+  static_dir: js
+
 - url: /.*
   login: required
   script: main.app
